--- a/insurancecalculator/package.json
+++ b/insurancecalculator/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^1.6.8",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.1.1",
     "webpack": "^5.38.1"
